Fix Ponder Exception, spacing
Summary: Evidently I only tested adding a question, not an answer. Properly set the getter. Also, fixed some header spacing.

Test Plan: Add a question, add an answer. See everything work, proper spacing.

Reviewers: epriestley, avivey

Reviewed By: avivey

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D15341

--- a/webroot/rsrc/css/application/ponder/ponder-view.css
+++ b/webroot/rsrc/css/application/ponder/ponder-view.css
@@ -169,7 +169,7 @@
 }
 
 .ponder-answer-view .ponder-footer-view {
-  margin-top: 24px;
+  margin-top: 16px;
   border-top: 1px solid rgba({$alphagrey}, .15);
   border-bottom: none;
 }
@@ -184,6 +184,10 @@ body .phui-main-column .ponder-question-content .ponder-answer-view
   padding: 8px 0;
   margin-right: 8px;
   display: inline-block;
+}
+
+.ponder-answer-section {
+  margin-top: 32px;
 }
 
 .ponder-add-answer-header {
